@@ -1,3 +1,6 @@
+Upcoming:
+- Spawner configuration is now a server config (located in <world>/serverconfig/rftoolsutility-mobdata.toml)
+
 2.1.6:
 - The Spawner is back!
 
